@@ -96,10 +96,10 @@ BEGIN
     CONTROL         "Enable status bar",IDC_ENABLE_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,19,72,10
     CONTROL         "Resolve ghost windows to hung windows",IDC_RESOLVEGHOSTWINDOWS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,32,152,10
-    DEFPUSHBUTTON   "OK",IDOK,79,60,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,133,60,50,14
     CONTROL         "Auto-hide main menu (Alt or F10 key toggle)",IDC_ENABLE_AUTOHIDE_MENU,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,44,157,10
+    DEFPUSHBUTTON   "OK",IDOK,79,60,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,133,60,50,14
 END
 
 IDD_CUSTOMIZE_TB DIALOGEX 0, 0, 369, 191
@@ -107,23 +107,23 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Customize Toolbar"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDCANCEL,312,170,50,14
-    PUSHBUTTON      "Reset",IDC_RESET,258,170,50,14
-    LISTBOX         IDC_AVAILABLE,7,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Available toolbar buttons:",IDC_STATIC,7,7,85,8
+    LISTBOX         IDC_AVAILABLE,7,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add >",IDC_ADD,133,50,50,14
     PUSHBUTTON      "< Remove",IDC_REMOVE,134,68,50,14
-    LISTBOX         IDC_CURRENT,187,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Current toolbar buttons:",IDC_STATIC,188,7,81,8
-    COMBOBOX        IDC_SEARCHOPTIONS,56,155,123,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_TEXTOPTIONS,56,139,123,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_CURRENT,187,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Move Up",IDC_MOVEUP,312,18,50,14
     PUSHBUTTON      "Move Down",IDC_MOVEDOWN,312,36,50,14
     LTEXT           "Text options:",IDC_STATIC,7,142,44,8
+    COMBOBOX        IDC_TEXTOPTIONS,56,139,123,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Search box:",IDC_STATIC,7,158,45,8
+    COMBOBOX        IDC_SEARCHOPTIONS,56,155,123,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Enable modern icons",IDC_ENABLE_MODERN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,188,141,83,10
     CONTROL         "Auto-hide main menu (Alt or F10 key toggle)",IDC_ENABLE_AUTOHIDE_MENU,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,188,154,157,10
+    PUSHBUTTON      "Reset",IDC_RESET,258,170,50,14
+    DEFPUSHBUTTON   "Close",IDCANCEL,312,170,50,14
 END
 
 IDD_CUSTOMIZE_SB DIALOGEX 0, 0, 373, 142
@@ -131,16 +131,16 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Customize Status Bar"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDCANCEL,316,121,50,14
-    PUSHBUTTON      "Reset",IDC_RESET,316,103,50,14
-    LISTBOX         IDC_AVAILABLE,7,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Available status bar entries:",-1,7,7,91,8
+    LISTBOX         IDC_AVAILABLE,7,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add >",IDC_ADD,133,50,50,14
     PUSHBUTTON      "< Remove",IDC_REMOVE,134,68,50,14
-    LISTBOX         IDC_CURRENT,187,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Current status bar entries:",-1,188,7,87,8
+    LISTBOX         IDC_CURRENT,187,18,122,117,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Move Up",IDC_MOVEUP,316,18,50,14
     PUSHBUTTON      "Move Down",IDC_MOVEDOWN,316,36,50,14
+    PUSHBUTTON      "Reset",IDC_RESET,316,103,50,14
+    DEFPUSHBUTTON   "Close",IDCANCEL,316,121,50,14
 END
 
 
